[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Door.tscn" type="PackedScene" id=1]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Torch.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Level.gd" type="Script" id=5]
[ext_resource path="res://ARCADE_N.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/levels/Level1Torches.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 23
outline_size = 2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 6
outline_size = 1
font_data = ExtResource( 6 )

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -1, 1, 0, -65536, 1, 1, -65535, 1, 1, -65534, 1, 1, -65533, 1, 1, -65532, 1, 1, -65531, 1, 1, -65530, 1, 1, -65529, 1, 1, -65528, 1, 1, -65527, 1, 1, -65526, 1, 1, -65525, 1, 1, -65524, 1, 1, -65523, 1, 1, -65522, 1, 1, -65521, 1, 1, -65520, 1, 1, -65519, 1, 1, -65518, 1, 1, -65517, 1, 1, -65516, 1, 1, -65515, 1, 1, -65514, 1, 1, -65513, 1, 1, -65512, 1, 1, -65511, 1, 1, -65510, 1, 1, -65509, 1, 1, -65508, 1, 1, -65507, 1, 1, -65506, 1, 1, -65505, 1, 1, -65504, 1, 2, 65535, 1, 65536, 0, 1, 65537, 1, 1, 65537, 2, 1, 65537, 3, 1, 65537, 4, 1, 65537, 5, 1, 65537, 6, 1, 65537, 7, 1, 65537, 8, 1, 65537, 9, 1, 65537, 10, 1, 65537, 11, 1, 65537, 12, 1, 65537, 13, 1, 65537, 14, 1, 65537, 15, 1, 65537, 16, 1, 65537, 17, 1, 65537, 18, 1, 65537, 19, 1, 65537, 20, 1, 65537, 21, 1, 65537, 22, 1, 65537, 23, 1, 65537, 24, 1, 65537, 25, 1, 65537, 26, 1, 65537, 27, 1, 65537, 28, 1, 65537, 29, 1, 65537, 30, 1, 65537, 31, 1, 65537, 32, 1, 65538, 131071, 1, 65536, 65536, 1, 65537, 65537, 1, 65537, 65538, 1, 65537, 65539, 1, 65537, 65540, 1, 65537, 65541, 1, 65537, 65542, 1, 131073, 65543, 1, 131073, 65544, 1, 131073, 65545, 1, 131073, 65546, 1, 131073, 65547, 1, 131073, 65548, 1, 131073, 65549, 1, 131073, 65550, 1, 131073, 65551, 1, 131073, 65552, 1, 131073, 65553, 1, 131073, 65554, 1, 131073, 65555, 1, 131073, 65556, 1, 131073, 65557, 1, 131073, 65558, 1, 131073, 65559, 1, 131073, 65560, 1, 131073, 65561, 1, 131073, 65562, 1, 65537, 65563, 1, 65537, 65564, 1, 65537, 65565, 1, 65537, 65566, 1, 65537, 65567, 1, 65537, 65568, 1, 65538, 196607, 1, 65536, 131072, 1, 65537, 131073, 1, 65537, 131074, 1, 65537, 131075, 1, 65537, 131076, 1, 65537, 131077, 1, 131074, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 1, 131072, 131099, 1, 65537, 131100, 1, 65537, 131101, 1, 65537, 131102, 1, 65537, 131103, 1, 65537, 131104, 1, 65538, 262143, 1, 65536, 196608, 1, 65537, 196609, 1, 65537, 196610, 1, 65537, 196611, 1, 65537, 196612, 1, 131074, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 1, 131072, 196636, 1, 65537, 196637, 1, 65537, 196638, 1, 65537, 196639, 1, 65537, 196640, 1, 65538, 327679, 1, 65536, 262144, 1, 65537, 262145, 1, 65537, 262146, 1, 65537, 262147, 1, 131074, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 1, 131072, 262173, 1, 65537, 262174, 1, 65537, 262175, 1, 65537, 262176, 1, 65538, 393215, 1, 65536, 327680, 1, 65537, 327681, 1, 65537, 327682, 1, 131074, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 1, 131072, 327710, 1, 65537, 327711, 1, 65537, 327712, 1, 65538, 458751, 1, 65536, 393216, 1, 65537, 393217, 1, 65538, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 1, 65536, 393247, 1, 65537, 393248, 1, 65538, 524287, 1, 65536, 458752, 1, 65537, 458753, 1, 65538, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 1, 65536, 458783, 1, 65537, 458784, 1, 65538, 589823, 1, 65536, 524288, 1, 65537, 524289, 1, 65537, 524290, 1, 2, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 1, 0, 524318, 1, 65537, 524319, 1, 65537, 524320, 1, 65538, 655359, 1, 65536, 589824, 1, 65537, 589825, 1, 65537, 589826, 1, 65537, 589827, 1, 2, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 1, 0, 589853, 1, 65537, 589854, 1, 65537, 589855, 1, 65537, 589856, 1, 65538, 720895, 1, 65536, 655360, 1, 65537, 655361, 1, 65537, 655362, 1, 65537, 655363, 1, 65537, 655364, 1, 2, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 1, 0, 655388, 1, 65537, 655389, 1, 65537, 655390, 1, 65537, 655391, 1, 65537, 655392, 1, 65538, 786431, 1, 65536, 720896, 1, 65537, 720897, 1, 65537, 720898, 1, 65537, 720899, 1, 65537, 720900, 1, 65537, 720901, 1, 2, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 1, 0, 720923, 1, 65537, 720924, 1, 65537, 720925, 1, 65537, 720926, 1, 65537, 720927, 1, 65537, 720928, 1, 65538, 851967, 1, 65536, 786432, 1, 65537, 786433, 1, 65537, 786434, 1, 65537, 786435, 1, 65537, 786436, 1, 65537, 786437, 1, 65537, 786438, 1, 1, 786439, 1, 1, 786440, 1, 1, 786441, 1, 1, 786442, 1, 1, 786443, 1, 1, 786444, 1, 1, 786445, 1, 1, 786446, 1, 1, 786447, 1, 1, 786448, 1, 1, 786449, 1, 1, 786450, 1, 1, 786451, 1, 1, 786452, 1, 1, 786453, 1, 1, 786454, 1, 1, 786455, 1, 1, 786456, 1, 1, 786457, 1, 1, 786458, 1, 65537, 786459, 1, 65537, 786460, 1, 65537, 786461, 1, 65537, 786462, 1, 65537, 786463, 1, 65537, 786464, 1, 65538, 917503, 1, 65536, 851968, 1, 65537, 851969, 1, 65537, 851970, 1, 65537, 851971, 1, 65537, 851972, 1, 65537, 851973, 1, 65537, 851974, 1, 65537, 851975, 1, 65537, 851976, 1, 65537, 851977, 1, 65537, 851978, 1, 65537, 851979, 1, 65537, 851980, 1, 65537, 851981, 1, 65537, 851982, 1, 65537, 851983, 1, 65537, 851984, 1, 65537, 851985, 1, 65537, 851986, 1, 65537, 851987, 1, 65537, 851988, 1, 65537, 851989, 1, 65537, 851990, 1, 65537, 851991, 1, 65537, 851992, 1, 65537, 851993, 1, 65537, 851994, 1, 65537, 851995, 1, 65537, 851996, 1, 65537, 851997, 1, 65537, 851998, 1, 65537, 851999, 1, 65537, 852000, 1, 65538, 983039, 1, 65536, 917504, 1, 65537, 917505, 1, 131073, 917506, 1, 131073, 917507, 1, 131073, 917508, 1, 131073, 917509, 1, 131073, 917510, 1, 131073, 917511, 1, 131073, 917512, 1, 131073, 917513, 1, 131073, 917514, 1, 131073, 917515, 1, 131073, 917516, 1, 131073, 917517, 1, 131073, 917518, 1, 131073, 917519, 1, 131073, 917520, 1, 131073, 917521, 1, 131073, 917522, 1, 131073, 917523, 1, 131073, 917524, 1, 131073, 917525, 1, 131073, 917526, 1, 131073, 917527, 1, 131073, 917528, 1, 131073, 917529, 1, 131073, 917530, 1, 131073, 917531, 1, 131073, 917532, 1, 131073, 917533, 1, 131073, 917534, 1, 131073, 917535, 1, 65537, 917536, 1, 65538, 1048575, 1, 65536, 983040, 1, 65538, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 1, 65536, 983072, 1, 65538, 1114111, 1, 65536, 1048576, 1, 65538, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 1, 65536, 1048608, 1, 65538, 1179647, 1, 65536, 1114112, 1, 65537, 1114113, 1, 1, 1114114, 1, 1, 1114115, 1, 1, 1114116, 1, 1, 1114117, 1, 1, 1114118, 1, 1, 1114119, 1, 1, 1114120, 1, 1, 1114121, 1, 1, 1114122, 1, 1, 1114123, 1, 1, 1114124, 1, 1, 1114125, 1, 1, 1114126, 1, 1, 1114127, 1, 1, 1114128, 1, 1, 1114129, 1, 1, 1114130, 1, 1, 1114131, 1, 1, 1114132, 1, 1, 1114133, 1, 1, 1114134, 1, 1, 1114135, 1, 1, 1114136, 1, 1, 1114137, 1, 1, 1114138, 1, 1, 1114139, 1, 1, 1114140, 1, 1, 1114141, 1, 1, 1114142, 1, 1, 1114143, 1, 65537, 1114144, 1, 65538, 1245183, 1, 131072, 1179648, 1, 131073, 1179649, 1, 131073, 1179650, 1, 131073, 1179651, 1, 131073, 1179652, 1, 131073, 1179653, 1, 131073, 1179654, 1, 131073, 1179655, 1, 131073, 1179656, 1, 131073, 1179657, 1, 131073, 1179658, 1, 131073, 1179659, 1, 131073, 1179660, 1, 131073, 1179661, 1, 131073, 1179662, 1, 131073, 1179663, 1, 131073, 1179664, 1, 131073, 1179665, 1, 131073, 1179666, 1, 131073, 1179667, 1, 131073, 1179668, 1, 131073, 1179669, 1, 131073, 1179670, 1, 131073, 1179671, 1, 131073, 1179672, 1, 131073, 1179673, 1, 131073, 1179674, 1, 131073, 1179675, 1, 131073, 1179676, 1, 131073, 1179677, 1, 131073, 1179678, 1, 131073, 1179679, 1, 131073, 1179680, 1, 131074 )

[node name="Entry" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 256 )
Entry = true

[node name="Exit" parent="." instance=ExtResource( 1 )]
position = Vector2( 464, 256 )

[node name="Torches" type="Node2D" parent="."]

[node name="Torch" parent="Torches" instance=ExtResource( 4 )]
position = Vector2( 164, 250 )

[node name="Torch3" parent="Torches" instance=ExtResource( 4 )]
position = Vector2( 256, 250 )

[node name="Torch4" parent="Torches" instance=ExtResource( 4 )]
position = Vector2( 348, 250 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 48, 264 )

[node name="TitleTorches" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Torches" type="Node2D" parent="TitleTorches"]

[node name="Torch1" parent="TitleTorches/Torches" instance=ExtResource( 4 )]
position = Vector2( 80, 144 )
Brightness = 0.5

[node name="Torch2" parent="TitleTorches/Torches" instance=ExtResource( 4 )]
position = Vector2( 112, 104 )
Brightness = 0.5

[node name="Torch3" parent="TitleTorches/Torches" instance=ExtResource( 4 )]
position = Vector2( 152, 152 )
Brightness = 0.5

[node name="Torch4" parent="TitleTorches/Torches" instance=ExtResource( 4 )]
position = Vector2( 184, 72 )
Brightness = 0.5

[node name="Torch5" parent="TitleTorches/Torches" instance=ExtResource( 4 )]
position = Vector2( 224, 144 )
Brightness = 0.5

[node name="Torch6" parent="TitleTorches/Torches" instance=ExtResource( 4 )]
position = Vector2( 264, 72 )
Brightness = 0.5

[node name="Torch7" parent="TitleTorches/Torches" instance=ExtResource( 4 )]
position = Vector2( 304, 72 )
Brightness = 0.5

[node name="Torch8" parent="TitleTorches/Torches" instance=ExtResource( 4 )]
position = Vector2( 344, 152 )
Brightness = 0.5

[node name="Torch9" parent="TitleTorches/Torches" instance=ExtResource( 4 )]
position = Vector2( 384, 96 )
Brightness = 0.5

[node name="Torch10" parent="TitleTorches/Torches" instance=ExtResource( 4 )]
position = Vector2( 416, 136 )
Brightness = 0.5

[node name="Triggers" type="Node2D" parent="TitleTorches"]

[node name="Area2D1" type="Area2D" parent="TitleTorches/Triggers"]
position = Vector2( 104, 256 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleTorches/Triggers/Area2D1"]
position = Vector2( -7.62939e-06, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D2" type="Area2D" parent="TitleTorches/Triggers"]
position = Vector2( 184, 256 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleTorches/Triggers/Area2D2"]
position = Vector2( -7.62939e-06, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D3" type="Area2D" parent="TitleTorches/Triggers"]
position = Vector2( 256, 256 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleTorches/Triggers/Area2D3"]
position = Vector2( -7.62939e-06, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D4" type="Area2D" parent="TitleTorches/Triggers"]
position = Vector2( 328, 256 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleTorches/Triggers/Area2D4"]
position = Vector2( -7.62939e-06, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D5" type="Area2D" parent="TitleTorches/Triggers"]
position = Vector2( 424, 256 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleTorches/Triggers/Area2D5"]
position = Vector2( -7.62939e-06, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false

[node name="Control" type="Control" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 480.0
margin_bottom = 192.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.560784, 0.337255, 0.231373, 1 )
custom_colors/font_outline_modulate = Color( 0.4, 0.223529, 0.192157, 1 )
text = "Curse of
the Cursor"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 64.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.560784, 0.337255, 0.231373, 1 )
custom_colors/font_outline_modulate = Color( 0.4, 0.223529, 0.192157, 1 )
text = "Use the Arrow keys or WASD to move your character."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="Opened" from="Exit" to="." method="_on_Exit_Opened"]
[connection signal="body_entered" from="TitleTorches/Triggers/Area2D1" to="TitleTorches" method="_on_Area2D1_body_entered"]
[connection signal="body_entered" from="TitleTorches/Triggers/Area2D2" to="TitleTorches" method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="TitleTorches/Triggers/Area2D3" to="TitleTorches" method="_on_Area2D3_body_entered"]
[connection signal="body_entered" from="TitleTorches/Triggers/Area2D4" to="TitleTorches" method="_on_Area2D4_body_entered"]
[connection signal="body_entered" from="TitleTorches/Triggers/Area2D5" to="TitleTorches" method="_on_Area2D5_body_entered"]
